changin module-info.java file  to avoid git conflict